@@ -49,6 +49,7 @@ typedef struct DP_ViewModeFilter DP_ViewModeFilter;
 #define DP_FLAT_IMAGE_INCLUDE_BACKGROUND (1u << 0u)
 #define DP_FLAT_IMAGE_INCLUDE_SUBLAYERS  (1u << 1u)
 #define DP_FLAT_IMAGE_ONE_BIT_ALPHA      (1u << 2u)
+#define DP_FLAT_IMAGE_UNPREMULTIPLY      (1u << 3u)
 #define DP_FLAT_IMAGE_RENDER_FLAGS \
     (DP_FLAT_IMAGE_INCLUDE_BACKGROUND | DP_FLAT_IMAGE_INCLUDE_SUBLAYERS)
 
